--- a/LandMarkBook/Base.lproj/Main.storyboard
+++ b/LandMarkBook/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vMh-a3-zcp">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LandMarkBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="D3I-JG-rZW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="D3I-JG-rZW" secondAttribute="trailing" id="S02-rk-pgN"/>
+                            <constraint firstItem="D3I-JG-rZW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zvh-5h-k0l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="D3I-JG-rZW" secondAttribute="bottom" id="i28-U5-aKQ"/>
+                            <constraint firstItem="D3I-JG-rZW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xFG-dp-pjc"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="i9P-BV-YXk"/>
+                    <connections>
+                        <outlet property="TableView" destination="D3I-JG-rZW" id="BbQ-Th-tBo"/>
+                        <segue destination="XH6-xf-zkI" kind="show" identifier="toImageViewController" id="l6X-lD-51l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="168.11594202898553" y="-571.20535714285711"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="MKY-FP-aoN">
+            <objects>
+                <viewController id="XH6-xf-zkI" customClass="imageViewController" customModule="LandMarkBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bwG-h2-Lta">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rlq-e9-YCH">
+                                <rect key="frame" x="20" y="88" width="374" height="243"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5eH-ci-Swk">
+                                <rect key="frame" x="20" y="378" width="374" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="jL3-xt-Jyc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="A3n-cU-f36"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Rlq-e9-YCH" firstAttribute="leading" secondItem="5eH-ci-Swk" secondAttribute="leading" id="6hi-eW-wyw"/>
+                            <constraint firstItem="Rlq-e9-YCH" firstAttribute="top" secondItem="A3n-cU-f36" secondAttribute="top" id="Hkq-Fj-NjM"/>
+                            <constraint firstItem="5eH-ci-Swk" firstAttribute="top" secondItem="Rlq-e9-YCH" secondAttribute="bottom" constant="47" id="bsX-x7-YgV"/>
+                            <constraint firstItem="A3n-cU-f36" firstAttribute="bottom" secondItem="5eH-ci-Swk" secondAttribute="bottom" constant="427" id="gmF-8y-7sI"/>
+                            <constraint firstItem="Rlq-e9-YCH" firstAttribute="trailing" secondItem="5eH-ci-Swk" secondAttribute="trailing" id="qhN-ln-stn"/>
+                            <constraint firstItem="Rlq-e9-YCH" firstAttribute="leading" secondItem="bwG-h2-Lta" secondAttribute="leadingMargin" id="tY3-mc-VCS"/>
+                            <constraint firstItem="Rlq-e9-YCH" firstAttribute="trailing" secondItem="bwG-h2-Lta" secondAttribute="trailingMargin" id="tsr-Im-dvL"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="20N-Yg-H4M"/>
+                    <connections>
+                        <outlet property="imageLabel" destination="5eH-ci-Swk" id="agG-Tz-6FZ"/>
+                        <outlet property="imageView" destination="Rlq-e9-YCH" id="AjM-Lh-2bj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qPf-e2-GD3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1044.9275362318842" y="-571.20535714285711"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LlP-dk-Bct">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vMh-a3-zcp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VIF-Jb-qQw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="b9l-gr-scp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eaJ-B6-QBY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-742.02898550724649" y="-571.20535714285711"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
